<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sargon OCR app</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="intro">Capture a picture to crop!</string>
	<string name="picture">Picture</string>
	<string name="capture">Launch Camera</string>
	<string name="OCRText">Extracted Text</string>
	<string name="OCRWait">Please Wait...</string>
	<string name="ocr">OCR</string>
	<string name="database">Database</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="serial_number">Serial Number</string>
    <string name="part_number">Part Number</string>
    <string name="asset_number">Asset Number</string>
    <string name="engine_model_type">Engine Model Type</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ocr_result">COMPANY 655 W. RYAN STREET BRILLION. WISCONSIN 54110 USA 2012
        					920014 081568 MODEL NO. SERIAL NO. WARRANTY CODE: SB</string>
    <string name="confirmation_message">Are you sure you want to submit? Please make sure that all the information has been validated</string>
    <string name="box_selection_message">Please select which box you would like to edit</string>
    <string name="checkbox_message">Select the fields that you would like to insert from the information retrieved from the label</string>
    <string name="titleBox">Mobile OCR Application used to capture manufacture tags and save the information to a database. </string>
    <string name="EditTextDefault">None Found</string>

</resources>
