<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItem" >
	
		<TextView
		    android:id="@+id/SERIAL_NUMBER_TEXT"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/serial_number"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
		<EditText
		    android:id="@+id/SERIAL_NUMBER"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:hint="@string/serial_number"
		    android:textSize="22sp" />
		<TextView
		    android:id="@+id/ASSET_NUMBER_TEXT"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/asset_number"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
		<EditText
		    android:id="@+id/ASSET_NUMBER"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:hint="@string/asset_number"
		    android:textSize="22sp" />
		
		<TextView
		    android:id="@+id/ENGINE_MODEL_TYPE_TEXT"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/engine_model_type"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
		
		<EditText
	        android:id="@+id/ENGINE_MODEL_TYPE"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/engine_model_type"
	        android:textSize="22sp" />
		
		<TextView
		    android:id="@+id/PART_NUMBER_TEXT"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/part_number"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
		
		<EditText
		    android:id="@+id/PART_NUMBER"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:hint="@string/part_number"
		    android:textSize="22sp" />
		
	   <Button
	        android:id="@+id/editField"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="editField"
	        android:text="Change from label list" />
		
	    <Button
	        android:id="@+id/equipment_confirm_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="insert"
	        android:text="ADD ENTRY" />

		<Button
		    android:id="@+id/toDB"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:onClick="toDB"
		    android:text="VIEW PARTS" />
			
</LinearLayout>